--- a/css/style.css
+++ b/css/style.css
@@ -722,7 +722,6 @@ color: var(--primary-text-color);
 .btn-close:hover, 
 .btn-close:focus {
 background-color:var(--primary-title-color);
-border-color: var(--accent-color);
 }
 .btn-close:hover .btn-close-modal, 
 .btn-close:focus .btn-close-modal {
@@ -770,10 +769,12 @@ margin-bottom: 12px;
   cursor: pointer;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:focus {
+.modal-input:focus,
+.modal-input:hover {
   border-color: var(--accent-color);
 }
-.modal-input:focus + .input-icon {
+.modal-input:focus + .input-icon,
+.modal-input:hover + .input-icon {
   fill: var(--accent-color);
 }
 .input-wrapper {
