--- a/css/style.css
+++ b/css/style.css
@@ -548,6 +548,70 @@ background-color:var(--accent-color);
 .footer-social-link:focus .footer-social-icon {
 fill:var(--primary-title-color);
 }
+.join {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  text-transform: uppercase;
+  color: #ffffff;
+  margin-bottom: 20px;
+}
+.subscribe {
+  padding-left: 93px;
+  padding-top: 12px;
+}
+.subscribe-input {
+  width: 358px;
+  height: 60px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  padding: 15px 16px;
+  background-color: transparent;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  color: #ffffff;
+  outline: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-input::placeholder {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-input:focus {
+  border-color: #ffffff;
+}
+.subscribe-input:focus::placeholder {
+  color: #ffffff;
+}
+.subscribe-btn {
+  margin-left: 12px;
+  background-color: var(--accent-color);
+  color: #ffffff;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  padding: 10px 29px;
+  align-items: center;
+  justify-content: center;
+  display: inline-flex;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+  background-color: #188ce8;
+}
+.footer-subscribe-icon {
+  width: 24px;
+  height: 24px;
+  margin-left: 10px;
+}
 
 /*--------PORTFOLIO------*/
 
@@ -675,7 +739,9 @@ line-height: 1.87;
 letter-spacing: 0.03em;
 color: var(--primary-text-color);
 }
+
 /*---------MODAL----------*/
+
 .backdrop{
   width: 100vw;
   height: 100vh;
@@ -687,7 +753,7 @@ color: var(--primary-text-color);
   align-items: center;
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.backdrop.is-hidden{
+.backdrop .is-hidden{
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -804,8 +870,9 @@ margin-bottom: 12px;
   outline: none;
   transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-comment:focus {
-  border-color: var(--accent-color);
+.modal-comment:focus,
+.modal-comment:hover {
+border-color: var(--accent-color);
 }
 .modal-comment::placeholder {
   font-weight: 400;
