--- a/css/style.css
+++ b/css/style.css
@@ -122,20 +122,20 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-list .header-item {
   margin-right: 50px;
- }
- .header-list .header-item:last-child {
+}
+.header-list .header-item:last-child {
   margin-right: 0;
- }
+}
  .header-address .header-address-item {
-   margin-right: 50px;
+  margin-right: 50px;
 }
  .header-address .header-address-item:last-child {
  margin-right: 0;
- }
- .header-icon-svg {
-   margin-right: 5px;
-   fill: currentColor;
- }
+}
+.header-icon-svg {
+ margin-right: 5px;
+ fill: currentColor;
+}
 
 
 /*----------HERO---------*/
@@ -242,7 +242,9 @@ margin: 0 auto;
   letter-spacing: 0.03em;
   color: var(--primary-text-color);
 }
+
 /*-------FOTO------*/
+
 .foto {
   padding-top: 47px;
   padding-bottom: 47px;
@@ -262,7 +264,6 @@ flex-basis: calc((100% - 90px) / 3);
 .foto-foto:not(:first-child) {
 margin-left: 30px;
 }
-
 .foto-title {
  margin-bottom: 50px;
  font-size: 36px;
@@ -293,7 +294,9 @@ margin-left: 30px;
     color: var(--primary-title-color);
     bottom: 0;
 }
+
 /*-------TIME--------*/
+
 .time {
 padding-top: 47px;
 padding-bottom: 47px;
@@ -548,6 +551,10 @@ background-color:var(--accent-color);
 .footer-social-link:focus .footer-social-icon {
 fill:var(--primary-title-color);
 }
+.subscribe {
+  padding-left: 93px;
+  padding-top: 12px;
+}
 .join {
   font-weight: 700;
   font-size: 14px;
@@ -555,10 +562,6 @@ fill:var(--primary-title-color);
   text-transform: uppercase;
   color: #ffffff;
   margin-bottom: 20px;
-}
-.subscribe {
-  padding-left: 93px;
-  padding-top: 12px;
 }
 .subscribe-input {
   width: 358px;
@@ -611,133 +614,7 @@ fill:var(--primary-title-color);
   width: 24px;
   height: 24px;
   margin-left: 10px;
-}
-
-/*--------PORTFOLIO------*/
-
-.button {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.button-list {
-display: flex;
-align-items: center;
-justify-content: center;
-margin-bottom: 50px;
-}
-.visually-hidden {
-  position: absolute;
-  width: 1px;
-  height: 1px;
-  margin: -1px;
-  padding: 0;
-  overflow: hidden;
-  border: 0;
-  clip: rect(0 0 0 0);
-}
-.button-button {
-margin-right: 8px;
-align-items: center;
-}
-.button-button:last-child {
-margin-right: 0;
-}
-.button-link {
-margin: 0 auto;
-padding: 6px 22px;
-font-family: Roboto;
-font-style: normal;
-font-weight: 500;
-font-size: 16px;
-line-height: 1.62;
-letter-spacing: 0.03em;
-color: var(--secondary-title-color);
-cursor: pointer;
-text-align: center;
-background-color: #F5F4FA;
-border-radius: 4px;
-border:none;
-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.button-link:hover,
-.button-link:focus,
-.button-link:active {
-background-color: #2196F3;
-color: var(--primary-title-color);
-border-radius: 4px;
-}
-.portfolio-list {
-display: flex;
-flex-wrap: wrap;
-}
-.portfolio-item {
-  display: block;
-  flex-basis: auto;
-margin-right: 30px;
-margin-bottom: 30px;
-}
-.portfolio-item:nth-child(3n) {
-margin-right: 0;
-}
-.portfolio-item:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-.portfolio-link:hover , 
-.portfolio-link:focus , 
-.portfolio-link:active {
-box-shadow: 0px 1px 1px 
-rgb(0 0 0 / 12%), 0px 4px 4px 
-rgb(0 0 0 / 6%), 1px 4px 6px 
-rgb(0 0 0 / 16%);
-}
-.portfolio-link:hover .portfolio-text-link{
-  transform: translateY(0);
-}
-.portfolio-link{
-transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.portfolio-text-link{
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 1.5;
-  padding: 63px 24px;
-  color:var(--primary-title-color);
-  background-color: rgba(33, 150, 243, 0.9);
-  position: absolute;
-  top: 0;
-  left: 0;
-  height: 100%;
-  transform: translateY(101%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.product-content-link{
-  position: relative;
-  overflow: hidden;
-}
-.product-content {
-padding: 20px 24px;
-border: 1px solid #eeeeee;
-border-top: none;
-}
-.portfolio-title {
-font-family: Roboto;
-font-style: normal;
-font-weight: 700;
-font-size: 18px;
-line-height: 2;
-letter-spacing: 0.06em;
-color: var(--secondary-text-color);
-}
-.portfolio-after-title {
-font-family: Roboto;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 1.87;
-letter-spacing: 0.03em;
-color: var(--primary-text-color);
+  color: #ffffff;
 }
 
 /*---------MODAL----------*/
@@ -785,6 +662,12 @@ color: var(--primary-text-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.btn-close-modal{
+  width: 18px;
+  height: 18px;
+  justify-content: center;
+  align-items: center;
+}
 .btn-close:hover, 
 .btn-close:focus {
 background-color:var(--primary-title-color);
@@ -792,12 +675,6 @@ background-color:var(--primary-title-color);
 .btn-close:hover .btn-close-modal, 
 .btn-close:focus .btn-close-modal {
 fill: var(--accent-color);
-}
-.btn-close-modal{
-  width: 18px;
-  height: 18px;
-  justify-content: center;
-  align-items: center;
 }
 .modal-field {
 margin-bottom: 10px;
@@ -931,3 +808,131 @@ border-color: transparent;
 .modal-btn:focus {
 background-color: #188ce8;
 }
+
+/*--------PORTFOLIO------*/
+
+.button {
+  padding-top: 94px;
+  padding-bottom: 94px;
+}
+.button-list {
+display: flex;
+align-items: center;
+justify-content: center;
+margin-bottom: 50px;
+}
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+.button-button {
+margin-right: 8px;
+align-items: center;
+}
+.button-button:last-child {
+margin-right: 0;
+}
+.button-link {
+margin: 0 auto;
+padding: 6px 22px;
+font-family: Roboto;
+font-style: normal;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.62;
+letter-spacing: 0.03em;
+color: var(--secondary-title-color);
+cursor: pointer;
+text-align: center;
+background-color: #F5F4FA;
+border-radius: 4px;
+border:none;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), 
+box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button-link:hover,
+.button-link:focus,
+.button-link:active {
+background-color: #2196F3;
+color: var(--primary-title-color);
+border-radius: 4px;
+}
+.portfolio-list {
+display: flex;
+flex-wrap: wrap;
+}
+.portfolio-item {
+  display: block;
+  flex-basis: auto;
+margin-right: 30px;
+margin-bottom: 30px;
+}
+.portfolio-item:nth-child(3n) {
+margin-right: 0;
+}
+.portfolio-item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+}
+.portfolio-link:hover , 
+.portfolio-link:focus , 
+.portfolio-link:active {
+box-shadow: 0px 1px 1px 
+rgb(0 0 0 / 12%), 0px 4px 4px 
+rgb(0 0 0 / 6%), 1px 4px 6px 
+rgb(0 0 0 / 16%);
+}
+.portfolio-link:hover .portfolio-text-link{
+  transform: translateY(0);
+}
+.portfolio-link{
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolio-text-link{
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 1.5;
+  padding: 63px 24px;
+  color:var(--primary-title-color);
+  background-color: rgba(33, 150, 243, 0.9);
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  transform: translateY(101%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.product-content-link{
+  position: relative;
+  overflow: hidden;
+}
+.product-content {
+padding: 20px 24px;
+border: 1px solid #eeeeee;
+border-top: none;
+}
+.portfolio-title {
+font-family: Roboto;
+font-style: normal;
+font-weight: 700;
+font-size: 18px;
+line-height: 2;
+letter-spacing: 0.06em;
+color: var(--secondary-text-color);
+}
+.portfolio-after-title {
+font-family: Roboto;
+font-style: normal;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.87;
+letter-spacing: 0.03em;
+color: var(--primary-text-color);
+}
+
